# mondrian

./: .gitignore  CMakeCache.txt  CMakeLists.txt  COPYING  CREDITS  Makefile  cmake_install.cmake  exp_row_vs_column_store  lbmslv  main.c  main.cxx
CUDA Test/: makefile  sources.mk  subdir.mk
CUDA Test/Pantheon/: subdir.mk
Experiments/PagingVsBuffering/: launcher.cpp
Experiments/RowVsColumnStore/: CMakeCache.txt  CMakeLists.txt  Launcher.cpp  cmake_install.cmake  launcher.cpp  main  result8.csv  results.csv  testresult.csv
Pantheon/: Attribute.cxx  config.cxx  error.cxx  event.cxx
Pantheon/Container/: ArrayList.cxx  LinkedList.cxx  Queue.cxx  RecycleBuffer.cxx
Pantheon/IO/: BufferManager.cxx
assets/: mondrian_logo
core/: Attribute.cxx  attribute.c  config.c  config.cxx  error.c  error.cxx  event.c  event.cxx
core/collections/: Queue.cxx  RecycleBuffer.cxx  queue.c  recycle_buffer.c
include/Pantheon/: Attribute.h  config.h  error.h  event.h  macros.h  (+3 more)
mondrian/: CMakeLists.txt  main.cpp
mondrian-tests/: CMakeLists.txt
mondrian/include/: logger.hpp  mondrian
mondrian/include/functional/: comparators.hpp
mondrian/include/modules/: manifest.h  modules.h
mondrian/include/modules/show/: main.h
mondrian/include/modules/show/c/: main.h
mondrian/include/modules/show/w/: main.h
mondrian/include/modules/version/: main.h
mondrian/include/query_engine/: query.hpp
mondrian/include/query_engine/operators/: batch_pipe.hpp  bi_pipe.hpp  bi_pipe_tail.hpp  consumer.hpp  forwarder.hpp  pipe.hpp  pipe_head.hpp  pipe_tail.hpp
mondrian/include/query_engine/operators/bi_pipes/: test_bi_pipe.hpp
mondrian/include/query_engine/operators/pipe_heads/: reader.hpp
mondrian/include/query_engine/operators/pipe_tails/: printer.hpp
mondrian/include/query_engine/operators/pipes/: collector.hpp  sequential_count.hpp  sequential_filter.hpp  sequential_sum.hpp
mondrian/include/storage/: column.hpp  dedup_functions.hpp  default_value_suppliers.hpp
mondrian/include/storage/host/: column_store.hpp
mondrian/include/utils/: alg.h  debug_build.h  gather.hpp  kernel.h  log.h  ntsid.h  result.h  sconfig.h  strings.hpp
mondrian/license/: gpl-2.0c.txt  gpl-2.0w.txt
mondrian/modules/: modules.c
mondrian/modules/playaround-query-engine/: main-index.cpp  main.cpp
mondrian/modules/show/: main.c
mondrian/modules/show/c/: main.c
mondrian/modules/show/w/: main.c
mondrian/modules/version/: main.c
mondrian/old/: host_vector_column.hpp
mondrian/utils/: alg.c
pantheon/: CMakeLists.txt  main.cpp
pantheon/include/: error.hpp  mondrian  policies.hpp
pantheon/include/collections/operations/: dedup.hpp
pantheon/include/functional/: comparators.hpp
pantheon/include/query_engine/operators/: bi_consumer.hpp  iterator.hpp  push_operator.hpp  sink_operator.hpp  source_operator.hpp  vector.hpp
pantheon/include/query_engine/operators/sinks/: printer.hpp
pantheon/include/query_engine/operators/sources/: reader.hpp
pantheon/include/query_engine/operators/sql/: sequential_count.hpp  sequential_filter.hpp  sequential_scan.hpp
pantheon/include/storage/: base_column.hpp  foreign_value_exists_checks.hpp  host_vector_column.hpp  increment_functions.hpp  value_constraints.hpp
pantheon/include/storage/host/: column_store.hpp
pantheon/include/utils/: strings.hpp
pantheon/old/: base_column.hpp
playground/bi_operators_play/: CMakeLists.txt  bench_marking_play.cpp  block_nested_join_play.cpp  cuckoo_playing.cpp  dense_hash_play.cpp  joins_result_files.csv  main.cpp  profiler.hpp  sparse_hash_play.cpp  stl_un_ordered_hash_join.cpp
playground/student_project/: CMakeLists.txt  counter.hpp  query_engine  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7  task7.cpp  task8.cpp  tasks.hpp  workspace.xml
playground/student_project/solutions/: Task3.R  task1-a.cpp  task1-b.cpp  task1-d.sh  task1-e-g.cpp  task1-h  task3.cpp
playground/student_project/solutions/vpipes/include/: vpipes.hpp
playground/student_project/solutions/vpipes/include/vpipes/: pipe_head.hpp  pipe_tail.hpp  vector.hpp
playground/student_project/solutions/vpipes/include/vpipes/toolkit/: collector.hpp  filters.hpp  materialize.hpp  printer.hpp  test_bi_pipe.hpp
playground/student_project/tasks/: CMakeLists.txt  profiling.hpp  task1-a.cpp  task1-b.cpp  task1-c.cpp  task1-d.sh  task1-e-g.cpp  task1-h  task1-i.cpp  task3.cpp
playground/student_project/tasks solutions/: CMakeLists.txt  task1-c.cpp  task1-i.cpp  task2-c  task3.cpp
playground/student_project/tasks solutions/vpipes/include/vpipes/: bi_consumer.hpp
playground/student_project/tasks/vpipes/include/vpipes/: batch_pipe.hpp  bi_pipe.hpp
playground/vpipes_play/: CMakeLists.txt  main.cpp  play_with_filters.cpp  play_with_map.cpp  play_with_project.cpp  play_with_table_scan.cpp  play_with_tee.cpp
sandbox/row_store_vs_column_store/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sandbox/row_store_vs_column_store/Device/: Query.cu
sandbox/row_store_vs_column_store/Host/: Query.cpp
sandbox/row_store_vs_column_store/R/: script.R
sandbox/row_store_vs_column_store/include/: Configure.h
sandbox/row_store_vs_column_store/include/Shared/: Common.h
tests/: CMakeLists.txt
tests/storage/: column_functions_dedup_nested_loop_test.cpp  host_vector_column_test.cpp
vecpipes/: CMakeLists.txt
vpipes-test/: CMakeLists.txt  CTestTestfile.cmake  VpipesTesting  minimal_reader.hpp  tester_main.cpp  testing_batches.hpp  testing_dedup.hpp  testing_filters.hpp  testing_nullable_ops.hpp  testing_predicates.hpp  testing_reader_materlizer.hpp  testing_table_scan.hpp  testing_utilities.hpp  tests.cbp
vpipes-test/filter/unary_filter/branch_free_micro_optimized/: testing_nullable_ops.hpp
vpipes-test/filter/unary_filter/branch_free_unrolled/: testing_nullable_ops.hpp
vpipes-test/filter/unary_filter/straightforward/: testing_nullable_ops.hpp
vpipes-test/join/: join_includes.hpp  testing_cuckoo_hash_join.hpp  testing_dense_hash_join.hpp  testing_nested_loop_joins.hpp  testing_sparse_hash_join.hpp  testing_stl_hash_joins.hpp
(+166 files in other folders)
